src/app/globals.css
/* ... */
.watermark-container iframe {
  position: relative;
  z-index: 1;
  overflow: auto;
}

.watermark-container img {
  position: relative;
  z-index: 1;
}

.iframe-container {
  position: relative;
  width: 100%;
  height: 500px;
}

.iframe-container::before {
  content: attr(data-watermark);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  white-space: pre-line; 
  font-size: 20px;
  color: rgba(0, 0, 0, 0.2);
  z-index: 2;
  pointer-events: none;
  text-align: center;
}

.preview-container img {
  width: auto !important;
  height: auto;
  max-width: 600px !important;
  max-height: 600px;
  object-fit: cover;
}

.preview-image {
  border: 1px solid #ccc;
  background-color: #fff;
  padding: 5px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  pointer-events: none;
}

.preview-image img {
  width: 100%;
  height: auto;
  display: block;
  pointer-events: none;
}


.ant-radio-checked::after {
  border: #683ab7 !important;
}



input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  background-color: white !important;
  transition: background-color 5000s ease-in-out 0s;
}

.WACStatusBarContainer {
  display: none !important;
}

#ControlMenu-Small14 {
  display: none !important;
}

#fseaFullScreen-Small14 {
  display: none !important;
}

a.cui-ctl,
a.cui-ctl-medium,
a.cui-ctl-large,
a.cui-ctl-menu,
.cui-toolbar-toolbar a.cui-fslb {
  display: none !important;
}

/* #docViewer .toolbar-class {
  display: none !important; 
}

div[aria-label="Pop-out"] {
  display: none;
   }

  div[aria-label="toolbar"] {
  width: 52px;
  }    */

input {
  border-radius: 3px !important;
  max-height: 33px !important;
}

textarea,
.ant-picker,
.ant-input-affix-wrapper {
  border-radius: 3px !important;
}

.input-group input {
  max-height: 33px !important;
}

.dropdown-toggle {
  border-radius: 3px !important;
  max-height: 33px !important;
}

.role-user-dropdown .dropdown-item {
  font-size: 14px !important;
}

.sector-model .ant-btn-variant-solid {
  background-color: rgb(25, 135, 84) !important;
  font-size: 14px !important;
}

.sector-model .ant-btn-color-default {
  background-color: rgb(220, 53, 69) !important;
  border: none !important;
  color: #fff !important;
  font-size: 14px !important;
}

.sector-model .ant-modal-body input,
.sector-model .ant-modal-body input:focus {
  border: solid 1px #dee2e6 !important;
}

.ant-tree-checkbox-checked .ant-tree-checkbox-inner {
  background-color: #683ab7 !important;
  border-color: #683ab7 !important;
}

.ant-checkbox-indeterminate .ant-tree-checkbox-inner:after {
  background-color: #683ab7 !important;
}

.ant-picker-calendar-date-content .events .ant-badge-status-text {
  text-transform: capitalize !important;
}

iframe #WordViewerStatusBar {
  pointer-events: none !important;
}

.ndfHFb-c4YZDc-Wrql6b {
  display: none !important;
}

.ant-checkbox-checked.ant-checkbox-disabled .ant-checkbox-inner {
  background-color: #683ab78a !important;
}

.copy-button {
  max-height: 33px !important;
  padding-top: 3px !important;
  padding-bottom: 3px !important;
}

.active-badge {
  font-size: 12px;
  background-color: rgb(25, 135, 84) !important;
  padding: 5px 15px !important;
  color: #fff
}

.inactive-badge {
  background-color: rgb(220, 53, 69) !important;
  font-size: 12px;
  padding: 5px 15px !important;
  color: #fff
}

.table>:not(caption)>*>* {
  align-content: center !important;
}


.dropdown-toggle-bulk button{
  padding: 0px !important;
  background-color: transparent !important;
  color: #000  !important;
  border: none !important;
}
.searched-text em{
  background-color: #ece92d;
}





.custom-datepicker-popup .ant-picker-panel-container {
  max-height: 250px;
  overflow-y: auto;
}


.custom-datepicker-popup .ant-picker-panel-container::-webkit-scrollbar {
  width: 8px;
}
.custom-datepicker-popup .ant-picker-panel-container::-webkit-scrollbar-thumb {
  background: #d9d9d9;
  border-radius: 4px;
}


@media (max-width: 767px) {
  .custom-datepicker-popup .ant-picker-panel-container {
    max-height: 40vh;
    overflow-x: auto;
    max-width: 380px;
  }

  .custom-datepicker-popup .ant-picker-panel-container::-webkit-scrollbar {
    width: 4px;
  }
}

